# mumbaihacks25

./: .gitignore  README.md
aarogya_saathi/: .env  package.json
aarogya_saathi/backend/: .env.example  aarogya.db  pyproject.toml  trigger_call.py
aarogya_saathi/backend/app/: main.py
aarogya_saathi/backend/app/agents/: checkin_agent.py  medication_agent.py  nudge_agent.py  onboarding_agent.py  soap_agent.py  symptom_agent.py  triage_agent.py
aarogya_saathi/backend/app/core/: config.py  database.py  exceptions.py  scheduler.py  schemas.py
aarogya_saathi/backend/app/routers/: analytics.py  call_socket.py  community.py  patient_actions.py  portal.py  trigger_call.py  websocket.py
aarogya_saathi/backend/app/services/: asr_correction.py  audio_analysis.py  deepgram_service.py  groq_service.py  tts_service.py  twilio_service.py  weather_service.py
aarogya_saathi/backend/assets/: medical_facts.json
aarogya_saathi/backend/tests/: test_checkin.py  test_client.py  test_critical.py  test_services.py  test_sms_portal.py
aarogya_saathi/frontend/: .env  README.md  eslint.config.js  index.html  package.json
aarogya_saathi/frontend/src/: App.jsx  index.css
aarogya_saathi/frontend/src/pages/: DashboardPage.css  DashboardPage.jsx  DoctorDashboardPage.css  DoctorDashboardPage.jsx  DoctorPortal.css  DoctorPortal.jsx  GetCallPage.css  GetCallPage.jsx  LandingPage.jsx  LoginPage.css  LoginPage.jsx  OTPVerificationPage.css  OTPVerificationPage.jsx  SignupPage.css  SignupPage.jsx  SystemArchitecture.css  SystemArchitecture.jsx  (+1 more)
aarogya_saathi/prisma/: schema.prisma
(+21 files in other folders)
